# yuqing

./: .gitignore  README.md  start-local.bat
backend/: .env.example  requirements.txt
backend/app/: adaface_model.py  ai.py  background_tasks.py  config.py  connectors.py  database.py  embeddings.py  face_alignment.py  face_clustering.py  face_engine.py  face_tuning.py  import_pipeline.py  main.py  media_cleanup.py  media_library.py  models.py  people.py  repository.py  schemas.py  scrfd_detector.py  search_service.py  serializers.py  video_embeddings.py  video_processing.py  video_reanalysis.py  video_search_service.py  watcher.py
docs/: architecture.md  scrfd-adaface-readme.md  video-support-readme.md  windows-build-tools.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: style.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/components/: MediaBatchToolbar.vue  PhotoCard.vue  PhotoDetailDrawer.vue  StatCard.vue  VideoCard.vue  VideoDetailDrawer.vue
frontend/src/layouts/: AppShell.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts  desktop.ts
frontend/src/utils/: format.ts
frontend/src/views/: BackgroundTasksView.vue  FaceClustersView.vue  FaceTuningView.vue  JobsView.vue  OrganizeView.vue  PeopleCorrectionsView.vue  PeopleView.vue  SearchView.vue  SourcesView.vue  VideosView.vue
scripts/: evaluate-face-retrieval.py  evaluate-video-retrieval.py  start-local.ps1
