[package]
name = "cross_source_ai_photo_manager"
version = "0.1.0"
description = "Desktop shell for cross-source AI photo management"
authors = ["yuqing"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cross_source_ai_photo_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
